--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -1,17 +1,28 @@
-*, ::after, ::before {
+* {
   box-sizing: border-box;
 }
 
-.header, .navigation, main, aside {
-  border: 1px blue solid;
+.container {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.container {
+.container--gray {
   background-color: $background-color;
+}
+
+.container-fluid {
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .row {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .after-row {
@@ -20,52 +31,40 @@
     position: absolute;
     content: "";
     display: block;
-    width: calc(100% - 40px);
+    width: 100%;
     height: 1px;
     background-color: $background-color;
     opacity: 0.7;
     bottom: 20px;
-    left: 40px;
+    left: 0;
   }
 }
 
 .after-row--align-left {
   &::after {
-    left: 0;
-    width: 100%;
+    width: calc(100% - 40px);
+    left: 40px;
   }
 }
 
 .header {
-  flex: 0 0 70%;
   height: 60px;
   position: fixed;
-  margin-left: 183px;
-  background-color: $page-color;
-  width: 100%;
-  min-width: 700px;
-  max-width: 1152px;
 }
 
 .navigation {
-  flex: 0 0 30%;
   height: 60px;
   position: fixed;
 }
 
 .main {
-  margin-top: 60px;
-  margin-left: 183px;
-  flex: 0 0 90%;
+  background-color: $background-color;
 }
 
 .aside {
-  flex: 0 0 10%;
-  margin-top: 60px;
-  min-width: 183px;
   height: calc(100vh - 60px);
-  position: fixed;
   background-color: $black-color;
+  position: fixed;
 }
 
 .page {
@@ -73,6 +72,4 @@
   margin: 40px;
   border-radius: 10px;
   padding: 40px;
-  min-width: 600px;
-  max-width: 1024px;
 }
