--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -2,22 +2,41 @@
   box-sizing: border-box;
 }
 
-.container {
-  width: 100%;
-  max-width: 1170px;
-  margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
+.container-app {
+  display: flex;
+  height: 100vh;
 }
 
-.container--gray {
+.sidebar {
+  background-color: $black-color;
+}
+
+.container-main {
+  display: flex;
+  flex-direction: column;
   background-color: $background-color;
 }
 
-.container-fluid {
-  width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+.navigation {
+  background-color: $page-color;
+  height: $topbar-height;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-bottom: 2px solid $background-color;
+}
+
+.container-section {
+  height: calc(100vh - #{$topbar-height});
+  overflow-y: scroll;
+  padding: 1em;
+}
+
+.page {
+  background: $page-color;
+  border-radius: 4px;
+  margin: 1em;
+  padding: 20px;
 }
 
 .row {
@@ -25,51 +44,15 @@
   flex-wrap: wrap;
 }
 
-.after-row {
+.row--after {
   position: relative;
   &::after {
-    position: absolute;
     content: "";
     display: block;
+    position: absolute;
     width: 100%;
-    height: 1px;
+    height: 0.5px;
     background-color: $background-color;
-    opacity: 0.7;
-    bottom: 20px;
-    left: 0;
+    bottom: 0;
   }
-}
-
-.after-row--align-left {
-  &::after {
-    width: calc(100% - 40px);
-    left: 40px;
-  }
-}
-
-.header {
-  height: 60px;
-  position: fixed;
-}
-
-.navigation {
-  height: 60px;
-  position: fixed;
-}
-
-.main {
-  background-color: $background-color;
-}
-
-.aside {
-  height: calc(100vh - 60px);
-  background-color: $black-color;
-  position: fixed;
-}
-
-.page {
-  background-color: $page-color;
-  margin: 40px;
-  border-radius: 10px;
-  padding: 40px;
 }
