--- a/src/sass/partials/_typography.scss
+++ b/src/sass/partials/_typography.scss
@@ -1,6 +1,7 @@
 // TITLE
 
 .title {
+  margin: 10px;
   width: 100%;
 }
 
@@ -20,7 +21,7 @@
   }
 }
 
-.title-main{
+.title-main {
   padding: 5px 15px;
   font-size: 18px;
   color: #a6a6a6;
@@ -102,6 +103,10 @@
   margin: 0 10px;
 }
 
+.icon--veritical {
+  display: inline-block;
+}
+
 .icon--small::before {
   font-size: 12px;
 }
@@ -110,16 +115,20 @@
   font-size: 30px;
 }
 
+.icon--hover {
+  display: none;
+}
+
 .icon--after {
   position: relative;
   &::after {
     position: absolute;
     content: "";
     display: block;
-    height: 8px;
-    width: 8px;
+    height: 6px;
+    width: 6px;
     background-color: $alternative-link-color;
-    top: -15px;
+    top: -3px;
     right: 1px;
     border-radius: 50%;
   }
@@ -135,9 +144,15 @@
 }
 
 .icon--background-alternative {
-  padding: 25px 15px 10px;
+  padding: 10px;
   background-color: $alternative-link-color;
   color: $page-color;
+  &:hover {
+    padding: 9px;
+    background-color: $page-color;
+    color: $alternative-link-color;
+    border: 1px solid $alternative-link-color;
+  }
 }
 
 // LIST
@@ -147,11 +162,16 @@
   margin-bottom: 40px;
 }
 
+.list-menu {
+  margin-left: -40px;
+}
+
 .list-number {
-  text-align: center;
+  margin: 0 auto;
 }
 
 .list-icon {
+  margin: 10px;
   text-align: right;
 }
 
@@ -182,7 +202,6 @@
 
 .list__element--horizontal {
   display: inline;
-  padding: 5px 8px;
 }
 
 .list__element--hover:hover {
@@ -210,9 +229,13 @@
 // Table
 
 .table {
-  margin: 40px;
   border-spacing: 0;
   border-top: 1px solid $background-color;
+  width: 90%;
+}
+
+.table--center {
+  margin: 30px auto;
 }
 
 .table--no-top-border {
@@ -222,17 +245,15 @@
 .table-head__cell {
   border-bottom: 1px solid $background-color;
   vertical-align: middle;
-  padding: 10px 20px;
   text-align: left;
   &:hover .table-head__cell--filter {
     background-color: $background-color;
-    padding: 10px;
   }
   &:hover .table-head__icon {
     display: inline-block;
   }
   &:hover {
-    padding: 0 10px;
+    padding: 0;
   }
 }
 
@@ -245,6 +266,9 @@
   &:hover {
     background-color: $background-color;
   }
+  &:hover .icon--hover {
+    display: inline-block;
+  }
 }
 
 .table-body__row--pointer {
@@ -254,9 +278,7 @@
 .table-body__cell {
   vertical-align: middle;
   height: 50px;
-  min-width: 200px;
   border-bottom: 1px solid $background-color;
-  padding: 10px 20px;
 }
 
 .table-body__cell--right {
@@ -264,6 +286,10 @@
 }
 
 //Button
+
+.button-wrapper {
+  margin: 0 auto;
+}
 
 .button {
   background-color: $button-color;
@@ -274,7 +300,7 @@
   width: 150px;
   cursor: pointer;
   font-size: 18px;
-  margin: 20px;
+  margin: 10px;
   text-align: center;
   color: $page-color;
   font-family: "Roboto";
@@ -300,20 +326,22 @@
   width: 300px;
 }
 
-.button--tabs {
-  background-color: $page-color;
+.button-tabs {
+  background-color: $background-color;
   position: relative;
   font-size: 14px;
   color: $button-color;
   padding: 8px;
   font-weight: 700;
   height: 30px;
-  width: 70px;
-  min-width: 120px;
+  width: 120px;
   cursor: pointer;
   border-radius: 5px 5px 0 0;
+  display: inline-block;
   &:hover {
-    background-color: $background-color;
+    background-color: $page-color;
+    border: 2px solid $background-color;
+    padding: 6px;
   }
   &::after {
     position: absolute;
@@ -322,9 +350,20 @@
     width: 10px;
     height: 10px;
     background: $tab-color;
-    top: 10px;
+    top: 12px;
     left: 10px;
     border-radius: 50%;
+  }
+  &:hover::after {
+    background: $alternative-tab-color;
+    top: 10px;
+    left: 8px;
+  }
+}
+
+.button-tabs--alternative {
+  &::after {
+    background: $alternative-link-color;
   }
 }
 
@@ -334,9 +373,12 @@
   margin: 20px;
 }
 
+.input-wrapper--center {
+  margin: 30px auto;
+}
+
 .input-wrapper__label {
   padding: 5px 10px;
-  text-transform: uppercase;
   color: $button-color;
   font-weight: 700;
   letter-spacing: 1px;
@@ -354,6 +396,7 @@
 
 .add-border {
   border: 1px solid $background-color;
+  display: inline-block;
   &:hover {
     border: 1px solid $button-color;
   }
@@ -398,12 +441,43 @@
 
 // MEDIA
 
-@media(max-width: 767px) {
+@media(max-width: 560px) {
+  @include grid('xs');
+
+  .title {
+    margin: 5px;
+  }
+
+  .title-main {
+    margin: 0;
+  }
+  
+  .list-icon {
+    padding: 0;
+    font-size: 10px;
+  }
+
+  .table {
+    margin: 20px 0;
+  }
+}
+
+@media(min-width: 561px) {
   @include grid('sm');
+
+  .list-icon {
+    padding: 0;
+    font-size: 10px;
+  }
 }
 
 @media(min-width: 768px) {
   @include grid('md');
+  
+  .list-icon {
+    padding: 0;
+    font-size: 10px;
+  }
 }
 
 @media(min-width: 992px) {
