--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   background-color: $background-color;
+  z-index: 0;
 }
 
 .navigation {
@@ -37,6 +38,19 @@
   border-radius: 4px;
   margin: 1em;
   padding: 20px;
+  opacity: 0;
+  transition: 1s linear;
+
+  &.active {
+    opacity: 100;
+  }
+
+  &.deactive {
+    height: 0;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+  }
 }
 
 .row {
@@ -47,12 +61,54 @@
 .row--after {
   position: relative;
   &::after {
-    content: "";
-    display: block;
-    position: absolute;
+    @include after();
     width: 100%;
     height: 0.5px;
     background-color: $background-color;
     bottom: 0;
   }
+}
+
+@media (max-width: 568px) {
+  @include grid("xs");
+
+  .sidebar--change {
+    flex: 0 0 50%;
+    max-width: 50%;
+    position: absolute;
+    z-index: 999;
+    height: 100vh;
+    .title-main {
+      margin: 10px 0 20px 6px;
+      padding: 0;
+    }
+    .fas--background::before {
+      margin: 0 15px 0 10px;
+    }
+    .icon--menu {
+      margin: 0 15px 0 10px;
+    }
+  }
+
+  .container-main--change {
+    flex: 0 100%;
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 569px) {
+  @include grid("sm");
+}
+
+
+@media (min-width: 768px) {
+  @include grid("md");
+}
+
+@media (min-width: 992px) {
+  @include grid("lg");
+}
+
+@media (min-width: 1200px) {
+  @include grid("xl");
 }
