--- a/src/sass/partials/_mixins.scss
+++ b/src/sass/partials/_mixins.scss
@@ -1,9 +1,15 @@
 @mixin grid($prefix) {
-    @for $i from 1 through 12 {
-      .col-#{$prefix}-#{$i} {
-        $width: 100% / 12 * $i;
-        flex: 0 0 $width;
-        max-width: $width;
-      }
+  @for $i from 1 through 12 {
+    .col-#{$prefix}-#{$i} {
+      $width: 100% / 12 * $i;
+      flex: 0 0 $width;
+      max-width: $width;
     }
   }
+}
+
+@mixin after {
+  position: absolute;
+  content: "";
+  display: block;
+}
