--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,6 +5,44 @@
 @import 'partials/layout';
 @import 'partials/typography';
 
+@import 'components/title';
+@import 'components/title-main';
+@import 'components/title-page';
+@import 'components/title-section';
+
+@import 'components/text';
+@import 'components/paragraph';
+@import 'components/link';
+
+@import 'components/icon';
+
+@import 'components/list';
+@import 'components/list-number';
+@import 'components/list-icon';
+@import 'components/list__element';
+
+@import 'components/table-wrapper';
+@import 'components/table';
+@import 'components/table-head__cell';
+@import 'components/table-head__icon';
+@import 'components/table-body__row';
+@import 'components/table-body__cell';
+
+@import 'components/button-wrapper';
+@import 'components/button';
+@import 'components/button-tabs';
+
+@import 'components/form-wrapper';
+@import 'components/add-border';
+@import 'components/input-wrapper';
+@import 'components/input-wrapper__label';
+@import 'components/input-wrapper__input';
+@import 'components/input-wrapper__option';
+@import 'components/input-wrapper__checkbox';
+@import 'components/chart';
+
+@import 'components/media';
+
 @import 'sections/navigation';
 @import 'sections/aside';
 @import 'sections/header';
