--- a/src/sass/components/_table-body__row.scss
+++ b/src/sass/components/_table-body__row.scss
@@ -2,7 +2,7 @@
   &:hover {
     background-color: $background-color;
   }
-  &:hover .icon--hover {
+  &:hover .icons--hover {
     visibility: visible;
   }
 }
