--- a/src/sass/components/_table-head__cell.scss
+++ b/src/sass/components/_table-head__cell.scss
@@ -10,7 +10,7 @@
     font-weight: 700;
     padding: 5px;
   }
-  &:hover .table-head__icon {
+  &:hover .table-head__icons {
     color: $black-color;
     visibility: visible;
   }
