--- a/src/sass/components/_title-page.scss
+++ b/src/sass/components/_title-page.scss
@@ -1,6 +1,6 @@
 .title-page {
   font-size: 16px;
-  line-height: 42px;
+  padding: 20px 10px;
   color: #a6a6a6;
   font-family: "Roboto";
   font-weight: 500;
