--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -6,14 +6,9 @@ $brand-main-color: #ff0000;
 $button-color: #979797;
 $button-2-color: #858585;
 $background-color: #e3e3e3;
-$c-color: #f5f5f2;
 $alternative-link-color: #f58220;
 $button-3-color: #ffa200;
 $alternative-tab-color: #04ae00;
-$g-color: #74b67a;
-$h-color: #96cc9b;
-$i-color: #de5252;
-$j-color: #ec7171;
 $tab-color: #56819f;
 $page-color: #ffffff;
 $black-color: #000000;
@@ -25,7 +20,7 @@ $sidebar-tablet-width: $sidebar-width * 0.66;
 $topbar-height: 60px;
 
 /* Fonts */
-$brand-font: "Open Sans", Helvetica, Arial;
+$brand-font: 'Roboto';
 $paragraph-font: "Open Sans", Helvetica, Arial;
 $main-font: "Dancing Script", cursive;
 
