--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,17 +14,17 @@
 @import 'components/paragraph';
 @import 'components/link';
 
-@import 'components/icon';
+@import 'components/icons';
 
 @import 'components/list';
 @import 'components/list-number';
-@import 'components/list-icon';
+@import 'components/list-icons';
 @import 'components/list__element';
 
 @import 'components/table-wrapper';
 @import 'components/table';
 @import 'components/table-head__cell';
-@import 'components/table-head__icon';
+@import 'components/table-head__icons';
 @import 'components/table-body__row';
 @import 'components/table-body__cell';
 
@@ -33,7 +33,6 @@
 @import 'components/button-tabs';
 
 @import 'components/form-wrapper';
-@import 'components/add-border';
 @import 'components/input-wrapper';
 @import 'components/input-wrapper__label';
 @import 'components/input-wrapper__input';
