--- a/src/sass/components/_input-wrapper.scss
+++ b/src/sass/components/_input-wrapper.scss
@@ -13,3 +13,15 @@
     bottom: -30px;
   }
 }
+
+.input-wrapper--border {
+  border: 1px solid $background-color;
+  display: inline-block;
+  &:hover {
+    border: 1px solid $button-color;
+  }
+}
+
+.input-wrapper--personal {
+  display: flex;
+}
