--- a/src/sass/components/_list__element.scss
+++ b/src/sass/components/_list__element.scss
@@ -1,11 +1,7 @@
 .list__element {
-  padding: 5px 10px;
+  padding: 10px;
   white-space: nowrap;
   overflow: hidden;
-}
-
-.list__element--large {
-  padding: 24px 10px 4px 10px;
 }
 
 .list__element--background {
@@ -37,10 +33,11 @@
 
 .list__element--before {
   position: relative;
+  padding: 20px 10px;
   &::before {
     @include after();
     height: 100%;
-    width: 2px;
+    width: 1px;
     background-color: $background-color;
     top: 0;
     left: 0;
