--- a/src/sass/components/_media.scss
+++ b/src/sass/components/_media.scss
@@ -1,35 +1,73 @@
-@media (max-width: 568px) {
+@media (max-width: 320px) {
 
-  .title {
-    margin: 5px;
-  }
-
-  .title-main {
-    margin: 10px 30% 20px 30%;
-    padding: 0;
+  .icons--menu {
+    margin: 0 19px 0 10px;
   }
 
   .fas--background::before {
-    margin: 0 45px 0 0;
+    margin: 0 19px 0 0;
   }
+}
+
+@media (min-width: 321px) and (max-width: 408px) {
+
+  .icons--menu {
+    margin: 0 30px 0 13px;
+  }
+
+  .fas--background::before {
+    margin: 0 30px 0 3px;
+  }
+}
+
+@media (min-width: 409px) and (max-width: 415px) {
+
+  .icons--menu {
+    margin: 0 30px 0 16px;
+  }
+
+  .fas--background::before {
+    margin: 0 30px 0 6px;
+  }
+}
+
+
+@media (min-width: 416px) and (max-width: 478px) {
+
+  .icons--menu {
+    margin: 0 30px 0 13px;
+  }
+
+  .fas--background::before {
+    margin: 0 30px 0 3px;
+  }
+}
+
+@media (min-width: 479px) and (max-width: 481px) {
+
+  .icons--menu {
+    margin: 0 35px 0 20px;
+  }
+
+  .fas--background::before {
+    margin: 0 35px 0 10px;
+  }
+}
+
+@media (min-width: 482px) and (max-width: 566px) {
 
   .icon--veritical {
+    display: block;
     margin: 10px auto;
     text-align: center;
-    display: block;
   }
   
-  .list-icon {
-    padding: 0;
-    text-align: left;
+  .icons--menu {
+    margin: 0 33px 0 10px;
   }
 
-  .list-number {
-    margin: 20px 0;
-  }
-
-  .icon--menu {
-    margin: 0 60% 0 30%;
+  .fas--background::before {
+    margin: 0 33px 0 0;
   }
 
   .list__element--hover, .list__element--active {
@@ -51,10 +89,39 @@
   
   .input-wrapper__label {
     width: 100%;
-    padding: 0;
   }
 
   .table--middle {
     width: 100%;
+  }
+}
+
+@media (min-width: 567px) and (max-width: 700px) {
+  .icons--menu {
+    margin: 0 30px 0 10px;
+  }
+
+  .fas--background::before {
+    margin: 0 30px 0 0;
+  }
+}
+
+@media (min-width: 701px) and (max-width: 824px) {
+  .icons--menu {
+    margin: 0 33px 0 13px;
+  }
+
+  .fas--background::before {
+    margin: 0 33px 0 3px;
+  }
+}
+
+@media (min-width: 825px) and (max-width: 991px) {
+  .icons--menu {
+    margin: 0 33px 0 17px;
+  }
+
+  .fas--background::before {
+    margin: 0 33px 0 7px;
   }
 }
