--- a/src/sass/components/_link.scss
+++ b/src/sass/components/_link.scss
@@ -1,7 +1,6 @@
 .link {
   font-size: 14px;
   color: #56819f;
-  font-family: "Roboto";
   font-weight: 300;
   text-decoration: none;
   &:hover {
@@ -13,11 +12,14 @@
   font-size: 16px;
   line-height: 17px;
   color: #a6a6a6;
-  font-family: "Roboto";
   text-decoration: none;
   &:hover {
     color: $alternative-link-color;
   }
+}
+
+.link--number {
+  color: #a6a6a6;
 }
 
 .link--orange {
