--- a/src/sass/components/_icons.scss
+++ b/src/sass/components/_icons.scss
@@ -39,11 +39,11 @@
 
 .icons--background-alternative {
   font-size: 14px;
-  padding: 13px;
+  padding: 13px 13px 14px 13px;
   background-color: $alternative-link-color;
   color: $page-color;
   &:hover {
-    padding: 12px;
+    padding: 12px 12px 13px 12px;
     background-color: $page-color;
     color: $alternative-link-color;
     border: 1px solid $alternative-link-color;
