--- a/src/sass/components/_media.scss
+++ b/src/sass/components/_media.scss
@@ -18,6 +18,11 @@
   .fas--background::before {
     margin: 0 30px 0 3px;
   }
+
+  .list-number {
+    font-size: 5px;
+  }
+  
 }
 
 @media (min-width: 409px) and (max-width: 415px) {
@@ -56,7 +61,7 @@
 
 @media (min-width: 482px) and (max-width: 566px) {
 
-  .icon--veritical {
+  .icons--veritical {
     display: block;
     margin: 10px auto;
     text-align: center;
