delete_wrong_file

--- a/src/sass/components/_media.scss
+++ b/src/sass/components/_media.scss
@@ -4,6 +4,11 @@
     order: -1;
   }
 
+  .navigation {
+    position: absolute;
+    z-index: 999;
+  }
+
   .icons--menu {
     margin: 0 19px 0 10px;
   }
