fix_media_style

--- a/src/sass/components/_list-icons.scss
+++ b/src/sass/components/_list-icons.scss
@@ -1,6 +1,5 @@
 .list-icons {
-  margin: 10px;
-  text-align: right;
+  margin: 0;
   display: flex;
   white-space: nowrap;
   justify-content: flex-end
