--- a/src/sass/components/_list__element.scss
+++ b/src/sass/components/_list__element.scss
@@ -32,7 +32,7 @@
 
 .list__element--before {
   position: relative;
-  padding: 20px 10px;
+  padding: 20px;
   &::before {
     @include after();
     height: 100%;
