--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -13,13 +13,10 @@ $tab-color: #56819f;
 $page-color: #ffffff;
 $black-color: #000000;
 
-/* sizes */
-$paragraph-font-size: 16px;
-$sidebar-width: 250px;
-$sidebar-tablet-width: $sidebar-width * 0.66;
+// sizes
 $topbar-height: 60px;
 
-/* Fonts */
+// Fonts
 $brand-font: 'Roboto';
 $paragraph-font: "Open Sans", Helvetica, Arial;
 $main-font: "Dancing Script", cursive;
