--- a/src/sass/components/_media.scss
+++ b/src/sass/components/_media.scss
@@ -281,6 +281,10 @@
   .fas--background::before {
     margin: 0 30px 0 0;
   }
+
+  .list__element--before {
+    padding: 20px 15px;
+  }
 }
 
 @media (min-width: 701px) and (max-width: 824px) {
