--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -17,7 +17,7 @@ $black-color: #000000;
 $topbar-height: 60px;
 
 // Fonts
-$brand-font: 'Roboto';
-$paragraph-font: "Open Sans", Helvetica, Arial;
+$brand-font: 'Roboto', sans-serif;
+$paragraph-font: "Open Sans", Helvetica;
 $main-font: "Dancing Script", cursive;
 
